plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.14'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.detector'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.apache.commons:commons-lang3:3.18.0'
}

springBoot {
    mainClass = 'com.detector.SpamDetectorApplication'
}

test {
    useJUnitPlatform()
}